--- a/public/stylesheets/service.css
+++ b/public/stylesheets/service.css
@@ -1,159 +1,80 @@
-/* Style for the services section */
 
-#services {
-    background-color: #f4f4f4;
-    /* padding: 20px; */
-    /* margin-top: -3vh; */
-    /* text-align: center; */
-    background-color: #ffffff;
-    overflow: hidden;
-    /* background-color: #d41010; */
-    width: 100vw;
-    height: 100vh;
-  }
-  #services>h2{
-    font-size: 3vw;
-  }
-  /* Style for the container div */
-  .container {
-    display: flex;
-    /* flex-direction: row; */
-    justify-content: center;
-    flex-wrap: wrap;
-    gap: 20px;
-    background-color: rgb(0, 0, 0);
-    /* width: 100vw; */
-    /* height: 100vh; */
-    
-  }
-  
-  /* Style for the service divs */
-  .service {
-    background-color: #ffffff;
-    padding: 10px;
-    box-shadow: 0 0 5px rgba(0, 0, 0, 0.2);
-    flex: 0 0 calc(50% - 20px);
-    /* width: 110%; */
-    /* height: 100vh; */
-  }
-  
-  /* Style for the facilities div */
-  .facilities {
-    /* margin-top: 10px; */
-    display: flex;
-    flex-direction: column;
-    justify-content: space-between;
-    padding: 0.1vh 2vw;
-    width: 25vw;
-    /* background-color: green; */
-    height: 65vh;
-    position: relative;
+#services{
+  /* width: 100%; */
+  /* height: 100%; */
+  /* background-color: chocolate; */
+}
+#services>h1{
+  text-align: center;
+}
+.cantainer{
+  /* width: 100vw; */
+  /* height: 95vh; */
+  /* background-color: cornflowerblue; */
+}
+.cantainer .service{
+  display: flex;
+  /* width: 100vw; */
+  /* height: 50vh; */
+  /* background-color: red; */
+}
+.service .facilities{
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  width: 50vw;
+  height: 50vh;
+}
+.facilities>img{
+  width: 70%;
+  height: 70%;
+}
 
-  }
-  .facilities-p{
-    /* background-color: #d41010; */
-    margin-left: 30px;
-    position: absolute;
-     top: 57%;
-     margin-left:3vw;
-  }
-  .service img {
-    width: 48vw;
-    max-width: 300px;
-    height: 35vh;
-    margin-left: 1vw;
-  }
-  
-  /* Style for the buttons */
- .service .btn {
-    display: inline-block;
-    padding: 10px 20px;
-    background-color: #333333;
-    color: #ffffff;
-    text-decoration: none;
-    margin-top: 10px;
-  }
-  
-  /* Style for the heading */
-   .service>h3 {
-    margin-bottom: 20px;
-    font-size: 1vw;
-    padding: .5vw;
-    color:#d41010;
-  }
-  h2{
-    padding: 1vw;
-    font-size: 2vw;
-  }
-  
-  /* Style for the unordered list */
- .facilities-p> ul {
-    list-style-type: disc;
-    margin-left: 20px;
-    font-size: 0.8vw;
-    font-weight: 100;
-    padding: 0.9vw;
-    
-  }
-  
-  /* Responsive Styles */
-  
-  /* Small screens (up to 600px) */
-  @media (max-width: 600px) {
-    .service {
-      flex: 0 0 100%;
+.service .facilities-p{
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  flex-direction: column;
+  width: 50vw;
+  height: 50vh;
+}
 
-    }
-    .facilities {
-        margin-top: 10px;
-        display: flex;
-        flex-direction: column;
-        margin-left: 3vw;
-      }
-      .facilities-p{
-        /* background-color: #d41010; */
-        margin-left: 30px;
-        position: absolute;
-         top: 50%;
-         margin-left:8vw;
-      }
-      .facilities-p> ul {
-        list-style-type: disc;
-        margin-left: 17vw;
-        font-size: 2.3vw;
-        padding: 1.8vw;
-      }
-      .service img {
-        width: 55vw;
-        max-width: 300px;
-        height: 28vh;
-        margin-left: 24vw;
-
-      }
-      .service .btn {
-        display: inline-block;
-        padding: 6px 12px;
-        background-color: #333333;
-        color: #ffffff;
-        text-decoration: none;
-        margin-top: 17px;
-      }
-      
-  }
+.facilities-p>ul>li{
+ font-family: 'Gill Sans', 'Gill Sans MT', Calibri, 'Trebuchet MS', sans-serif; 
+ font-size: 2vw;
+}
+.btn{
+  display: inline-block;
+  padding: 1vh 2vw;
+  background-color: #333333;
+  color: #ffffff;
+  text-decoration: none;
+  margin-top: .5vw;
+}
+@media only screen and (max-width: 600px){
   
-  /* Medium screens (601px to 900px) */
-  @media (min-width: 601px) and (max-width: 900px) {
-    .service {
-      flex: 0 0 calc(50% - 20px);
-    }
-    
+  .service{
+      display: flex;
+      flex-direction: column;
   }
-  
-  /* Large screens (above 900px) */
-  @media (min-width: 901px) {
-    .container {
-      max-width: 900px;
-      margin: 0 auto;
-    }
+  .service .facilities{
+    background-size: cover;
+      width: 100vw;
+      height: 50vh;
   }
-  
+  .facilities>img{
+      width: 85%;
+      height: 85%;
+  }
+  .service .facilities-p{
+      width: 100vw;
+      height: 50vh;
+  }
+  .facilities-p>ul>li{
+      font-size: 5vw;
+      line-height: 3.5vh;
+  }
+  .btn{
+      margin-top: 1.5vh;
+  }
+}
