--- a/views/service.ejs
+++ b/views/service.ejs
@@ -1,27 +1,40 @@
 <!DOCTYPE html>
-<html>
+<html lang="en">
 <head>
-  <title>Food Ordering Service | Delicious Eats</title>
-  <link rel="stylesheet" type="text/css" href="\stylesheets\service.css">
-  <link rel="shortcut icon" href="\images\logot.png" type="image/x-icon">
+    <meta charset="UTF-8">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <title>Document</title>
+    <link rel="stylesheet" href="/stylesheets/service.css">
 </head>
 <body>
- 
-
-  <section id="services">
-    <h2>Our Services</h2>
-    <div class="container">
-        
-           <div class="service">
-              <h3>Table Booking</h3>
-              <div class="facilities">
-                      <img src="https://images.unsplash.com/photo-1560624052-449f5ddf0c31?ixlib=rb-4.0.3&ixid=M3wxMjA3fDB8MHxwaG90by1wYWdlfHx8fGVufDB8fHx8fA%3D%3D&auto=format&fit=crop&w=435&q=80" alt="Table Booking">
-    
-       
-        
-            
-                       <div class="facilities-p">
-                                 <ul>
+    <section id="services">
+        <h1>Services</h1>
+         <div class="cantainer">
+            <div class="service">
+                <div class="facilities">
+                    <img src="https://images.unsplash.com/photo-1560624052-449f5ddf0c31?ixlib=rb-4.0.3&ixid=M3wxMjA3fDB8MHxwaG90by1wYWdlfHx8fGVufDB8fHx8fA%3D%3D&auto=format&fit=crop&w=435&q=80" alt="Table Booking">       
+                </div>
+                <div class="facilities-p">
+                    <ul>
+                      <li>Comfortable seating</li>
+                      <li>Free Wi-Fi</li>
+                      <li>Power outlets for charging devices</li>
+                      <li>TV and entertainment options</li>
+                      <li>Clean and hygienic environment</li>
+                      <li>Food ordering and delivery</li>
+                      <li>Refreshments and beverages</li>
+                      <li>Restrooms and shower facilities</li>
+                    </ul>
+         
+                    <a href="#" class="btn">Book a Table</a>
+                </div>
+            </div>
+            <div class="service">
+                <div class="facilities">
+                    <img src="https://images.unsplash.com/photo-1495147466023-ac5c588e2e94?ixlib=rb-4.0.3&ixid=M3wxMjA3fDB8MHxwaG90by1wYWdlfHx8fGVufDB8fHx8fA%3D%3D&auto=format&fit=crop&w=387&q=80" alt="Food Ordering">
+                </div>
+                <div class="facilities-p">
+                    <ul>
                     <li>Comfortable seating</li>
                     <li>Free Wi-Fi</li>
                     <li>Power outlets for charging devices</li>
@@ -30,43 +43,14 @@
                     <li>Food ordering and delivery</li>
                     <li>Refreshments and beverages</li>
                     <li>Restrooms and shower facilities</li>
-                                   </ul>
-         
-            <a href="#" class="btn">Book a Table</a>
-                       </div>
-              </div>
-             <!-- <br> -->
+                    </ul>
+       
+        
+                      <a href="#" class="btn">Order Now</a>
+                </div>
+              
             </div>
-            <div class="service">
-          <h3>Food Ordering</h3>
-          <div class="facilities">
-             <img src="https://images.unsplash.com/photo-1495147466023-ac5c588e2e94?ixlib=rb-4.0.3&ixid=M3wxMjA3fDB8MHxwaG90by1wYWdlfHx8fGVufDB8fHx8fA%3D%3D&auto=format&fit=crop&w=387&q=80" alt="Food Ordering">
-       
-        
-            <div class="facilities-p">
-            <ul>
-               <li>Comfortable seating</li>
-               <li>Free Wi-Fi</li>
-               <li>Power outlets for charging devices</li>
-               <li>TV and entertainment options</li>
-               <li>Clean and hygienic environment</li>
-               <li>Food ordering and delivery</li>
-               <li>Refreshments and beverages</li>
-               <li>Restrooms and shower facilities</li>
-            </ul>
-       
-        
-        <a href="#" class="btn">Order Now</a>
-      </div>
-          </div>
-      </div>
-      
-  </section>
-
- 
-
-
-
- 
+         </div>
+    </section>
 </body>
 </html>
